@@ -91,11 +91,17 @@
     <Compile Include="BrowserScriptImportGeocache.cs" />
     <Compile Include="BrowserScriptPocketQueries.cs" />
     <Compile Include="BrowserScriptPocketQueriesPQSeries.cs" />
-    <Compile Include="BrowserScriptPocketQueriesPQSeriesForm.cs.cs">
+    <Compile Include="BrowserScriptPocketQueriesPQSeriesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BrowserScriptPocketQueriesPQSeriesForm.cs.Designer.cs">
-      <DependentUpon>BrowserScriptPocketQueriesPQSeriesForm.cs.cs</DependentUpon>
+    <Compile Include="BrowserScriptPocketQueriesPQSeriesForm.Designer.cs">
+      <DependentUpon>BrowserScriptPocketQueriesPQSeriesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BrowserScriptPocketQueriesPQSeriesGCProjectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BrowserScriptPocketQueriesPQSeriesGCProjectForm.Designer.cs">
+      <DependentUpon>BrowserScriptPocketQueriesPQSeriesGCProjectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="BrowserScriptPocketQueriesPQSetting.cs" />
     <Compile Include="BrowserScriptPocketQueriesPQSettingForm.cs">
@@ -150,8 +156,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="BrowserScriptPocketQueriesPQSeriesForm.cs.resx">
-      <DependentUpon>BrowserScriptPocketQueriesPQSeriesForm.cs.cs</DependentUpon>
+    <EmbeddedResource Include="BrowserScriptPocketQueriesPQSeriesForm.resx">
+      <DependentUpon>BrowserScriptPocketQueriesPQSeriesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BrowserScriptPocketQueriesPQSeriesGCProjectForm.resx">
+      <DependentUpon>BrowserScriptPocketQueriesPQSeriesGCProjectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BrowserScriptPocketQueriesPQSettingForm.resx">
       <DependentUpon>BrowserScriptPocketQueriesPQSettingForm.cs</DependentUpon>
@@ -203,6 +212,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="BrowserScriptTemplate.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\projectgc.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
