@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.296
+//     Runtime Version:4.0.30319.1008
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -105,6 +105,13 @@ namespace GlobalcachingApplication.Plugins.Browser.Properties {
         internal static System.Drawing.Bitmap New {
             get {
                 object obj = ResourceManager.GetObject("New", resourceCulture);
+                return ((System.Drawing.Bitmap)(obj));
+            }
+        }
+        
+        internal static System.Drawing.Bitmap projectgc {
+            get {
+                object obj = ResourceManager.GetObject("projectgc", resourceCulture);
                 return ((System.Drawing.Bitmap)(obj));
             }
         }
